--- a/abc/1.html
+++ b/abc/1.html
@@ -8,8 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-  <ul>
-111
-  </ul>
+
+<form action="/form" method="get">
+
+    <input type="text" name="user">
+    <input type="submit" value="123">
+</form>
 </body>
 </html>
