--- a/abc/login.html
+++ b/abc/login.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-  <header>
-      <a href="/login">登陆</a>
-  </header>
-  <div>
-      首页内容<br>
-      <a href="/message">查看留言</a>
-      
-  </div>
+<ul>
+    <li>111</li>
+</ul>
+<form action="/save">
+    <input type="text" name="user"><br>
+    <input type="text" name="pass"><br>
+    <input type="submit" value="登陆">
+</form>
 </body>
 </html>
